
	* src/lib/PlaceMarkLayout.cpp:
	* src/lib/PlaceMarkPainter.{h,cpp}:
	- More polishing in the layout/painter 
	  classes.

	* src/lib/TextureColorizer.cpp:
	* src/lib/texturepalette.cpp:
	* src/lib/ClipPainter.cpp:
	* tools/palettegen/palettegen.cpp:
	- Fixing tiny bug to improve render quality.
	- preparing further improved relief rendering.

2007-09-25  Inge Wallin  <inge@lysator.liu.se>

	Make BUGS file actually usable.
	* BUGS: Format better to make it readable
	
2007-09-25  Torsten Rahn  <rahn@kde.org>

	* src/lib/PlaceMarkModel.{h,cpp}:
	* src/lib/PlaceMarkPainter.{h,cpp}:
	* src/lib/PlaceMarkLayout.{h,cpp}:
	* src/lib/VisiblePlaceMark.{h,cpp}:
	* src/lib/CMakeLists.txt:
	* src/lib/ViewParams.h:

	- Seperating PlaceMarkPainter from 
	  the new PlaceMarkLayout class.
	- Better filtering.
	- tidied up VisiblePlaceMark

2007-09-24  Torsten Rahn  <rahn@kde.org>

	* src/lib/TileCreator.cpp:
	- Hopefully fixed Ingwa's bug?

	* src/lib/PlaceMarkPainter.cpp:
	- Tidying up PlaceMarkPainter.cpp a bit.

2007-09-23  Torsten Rahn  <rahn@kde.org>

	* src/lib/PlaceMarkPainter.cpp: 
	- Regretfully sorting out a frequently featured 
	  Feature regression

2007-09-23  Torsten Rahn  <rahn@kde.org>

	* src/lib/PlaceMarkPainter.cpp: 
	Partially fix the position of the label.

2007-09-20  Inge Wallin  <inge@lysator.liu.se>

	Add a View menu to the KDE application.
	* src/marbleui.rc: Add a View menu.

2007-09-20  Tobias Koenig <tokoe@kde.org>

  Major refactoring of the PlaceMark handling.

2007-09-20  Torsten Rahn  <rahn@kde.org>

	* data/flags/flag_gr.svg:
	- Fix greek flag (Bug 150033)

2007-09-18  Torsten Rahn  <rahn@kde.org>

	* src/kdemain.cpp:
	* src/qtmain.cpp:
	* src/lib/MarbleWidget.{cpp,h}:
	* src/lib/AutoSettings.{h,cpp}:
	* src/lib/CMakeLists.txt:

	- Added "--fps" comḿand line option to display framerate
	  on the fly as a preparation for the AutoSettings class.
	- Added stub for AutoSettings class

	* src/marble_part.cpp:
	* src/QtMainWindow.cpp:
